--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "pablosanches/registrobr-epp",
+  "name": "lojavirtual/registrobr-epp",
   "description": "SDK não oficial de integração com os Correios",
   "type": "library",
   "license": "MIT",
@@ -7,12 +7,12 @@
   "prefer-stable" : true,
   "autoload": {
     "psr-4": {
-      "PabloSanches\\RegistroBR\\": "src/"
+      "LojaVirtual\\RegistroBR\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "PabloSanches\\RegistroBR\\": "tests/"
+      "LojaVirtual\\RegistroBR\\": "tests/"
     }
   },
   "authors": [
